--- a/.github/workflows/dbt_cd.yml
+++ b/.github/workflows/dbt_cd.yml
@@ -43,9 +43,9 @@ jobs:
           mkdir -p ~/.dbt
           cat > ~/.dbt/profiles.yml <<YAML
           echanalytics:                # must match dbt_project.yml 'profile'
-            target: test
+            target: prod
             outputs:
-              test:
+              prod:
                 type: snowflake
                 account: "${SNOWFLAKE_ACCOUNT}"
                 role: "${SNOWFLAKE_ROLE}"
@@ -65,7 +65,7 @@ jobs:
         run: snow dbt deploy ech_analytics_dbt_project --external-access-integration $EXT_ACCESS --profiles-dir ~/.dbt --default-target prod --force -x
 
       - name: Execute build on dbt project object
-        run: snow dbt execute -x ech_analytics_dbt_project_test run --target prod
+        run: snow dbt execute -x ech_analytics_dbt_project_test build --target prod
 
   generate-docs:
     needs: deployment
